# EFT-analytical

Henry_work/: num_four_pow_replace.py  test_work.py
Henry_work/Code/rust_code/ibps/: Cargo.toml
Henry_work/Code/rust_code/ibps/src/: jfunc.rs  main.rs
Henry_work/Code/rust_code/ibps/src/jfunc/: ltrian.rs
Henry_work/integration_notes/: main.aux  main.fdb_latexmk  main.fls  main.tex  schwinger_bubble.aux  schwinger_bubble.blg  schwinger_bubble.fdb_latexmk  schwinger_bubble.fls  schwinger_bubble.out  schwinger_bubble.tex  schwinger_bubble_henry.aux  schwinger_bubble_henry.blg  schwinger_bubble_henry.out  schwinger_bubble_henry.tex  schwinger_bubble_v2.aux  schwinger_bubble_v2.blg  schwinger_bubble_v2.fdb_latexmk  schwinger_bubble_v2.fls  schwinger_bubble_v2.out  schwinger_bubble_v2.tex  schwinger_bubble_v3.aux  schwinger_bubble_v3.fdb_latexmk  schwinger_bubble_v3.fls  schwinger_bubble_v3.out  schwinger_bubble_v3.tex  schwinger_bubble_v4.aux  schwinger_bubble_v4.fdb_latexmk  schwinger_bubble_v4.fls  schwinger_bubble_v4.out  schwinger_bubble_v5 (1).tex  schwinger_bubble_v5 (2).tex  schwinger_bubble_v5.aux  schwinger_bubble_v5.fdb_latexmk  schwinger_bubble_v5.fls  schwinger_bubble_v5.out  schwinger_bubble_v5.tex  schwinger_bubble_v5.toc  schwinger_masters_v01.aux  schwinger_masters_v01.fdb_latexmk  schwinger_masters_v01.fls  (+3 more)
Henry_work/mathematica code/: PTwithFFT.nb  bispecredshift.nb  bispectrum_debug.nb  bispectrum_forpython.nb  for_Bernhard.nb  integerpowers_v6.nb  triangle_int.nb  triangle_int2.nb  two_loopPS.nb  twoloop.nb
Henry_work/tables/: B411_uvk2mono.m  (+9 more)
(+416 files in other folders)
